[tool.poetry]
name = "Beer"
version = "0.1.0-alpha"
description = "Beer: Challenging Problems in Probability and Statistics"
#license = "MIT"
authors = ["Xiangzhuang Shen <datahonor@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/shenxiangzhuang/beer"
repository = "https://github.com/shenxiangzhuang/beer"
keywords=[
    "machine learning",
    "statistics",
    "probablity",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
#    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
packages = [
    { include = "beer", from = "." }
]
include = [
#    "LICENSE",
    "README.md",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tqdm = {version = "^4.0.0", optional = true}
mkdocs-git-revision-date-localized-plugin = "^1.2.1"
mkdocs-git-authors-plugin = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
ipython = "^8.7.0"

[tool.poetry.group.lint.dependencies]
black = "^22.8.0"
pylint = "^2.15.3"
flake8 = "^5.0.4"
mypy = "^0.981"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
hypothesis = "^6.61.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.3"
mkdocs-material-extensions = "^1.0.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-autorefs = "^0.5.0"
pymdown-extensions = "^10.3"
mkdocs-simple-hooks = "^0.1.5"
mkdocs-version-annotations = "^1.0.0"
mkdocs-include-markdown-plugin = "^6.0.1"
markdown-exec = {extras = ["ansi"], version = "^1.6.0"}
matplotlib = "^3.8.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Development tool configuration

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
lines_between_types = 1

[tool.pylint.'MASTER']
fail-under = 8.0

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "useless-super-delegation",
]

[tool.pylint.'FORMAT']
max-line-length = 88

[tool.pytest.ini_options]
# TODO: change cov percent to 90
addopts = "-v --cov=toydl --cov-fail-under 0 --cov-report=term --cov-report=xml --cov-report=html"
testpaths = [
    "tests",
]
# Note that everything past the : after the mark name is an optional description.
markers = [
    "operator: operator related tests",
]


[tool.coverage.run]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'def __repr__',
]
fail_under = 90
precision = 1
skip_empty = true
sort = "-Cover"
