[project]
name = "Beer"
version = "0.2.0"
description = "Beer: Challenging Problems in Probability and Statistics"
authors = [
    {name = "Xiangzhuang Shen", email = "datahonor@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE-Apache-2.0"}
keywords = ["machine learning", "statistics", "probablity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocs-bibtex>=2.11.0",
    "mkdocstrings>=0.24.0",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2.4",
    "mkdocs-git-committers-plugin-2>=2.3.0",
    "mkdocs-autorefs>=0.5.0",
    "pymdown-extensions>=10.3",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocs-version-annotations>=1.0.0",
    "mkdocs-include-markdown-plugin>=6.0.1",
    "markdown-exec[ansi]>=1.6.0",
    "matplotlib>=3.8.0",
    "mkdocstrings-python>=1.9.2",
    "mkdocs-rss-plugin>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.7.0",
    "tqdm>=4.0.0",
]
lint = [
    "black>=22.8.0",
    "pylint>=2.15.3",
    "flake8>=5.0.4",
    "mypy>=0.981",
    "isort>=5.10.1",
    "pre-commit>=3.8.0",
]


[project.urls]
Homepage = "https://shenxiangzhuang.github.io/beer/"
Repository = "https://github.com/shenxiangzhuang/beer"

[tool.setuptools]
packages = ["beer"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["LICENSE-Apache-2.0", "LICENSE-CC-BY-NC-SA", "README.md"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
lines_between_types = 1
